argocd-server.yaml
apiVersion: apps/v1
kind: Deployment
# ... other parts of the deployment ...
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        # ... other container settings ...
        volumeMounts:
        - name: argocd-cm
          mountPath: /path/to/config/in/container 
      volumes:
      - name: argocd-cm
        configMap:
          name: argocd-cm
