my-postgres-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-postgres-db
spec:
  serviceName: "my-postgres-db"
  replicas: 1 
  selector:
    matchLabels:
      app: my-postgres-db
  template:
    metadata:
      labels:
        app: my-postgres-db
    spec:
      containers:
      - name: my-postgres-db
        image: sansugupta/my-postgres-db # Use your Docker Hub image later
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-persistent-storage 1 
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
