my-rails-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-rails-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-rails-app
  template:
    metadata:
      labels:
        app: my-rails-app
    spec:
      containers:
      - name: my-rails-app
        image: sansugupta/my-rails-app # Use your Docker Hub image later
        ports:
        - containerPort: 3000
