my-rails-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-rails-app-service
spec:
  selector:
    app: my-rails-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
